# python_M8

./: .gitignore  README.md  alembic.ini  contexto.py  pyproject.toml  resultado_codigo.txt
alembic/: env.py
alembic/versions/: 109e3c7cc7d2_create_users_and_posts_tables.py  7d76eef5018b_update_user_passwd.py
app/: blog.db  main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: health.py  posts.py  users.py
app/core/: auth.py  config.py  exceptions_handler.py
app/db/: session.py
app/models/: __init__.py  post.py  user.py
app/repositories/: post_repo.py  user_repo.py
app/schemas/: __init__.py  post.py  user.py
app/services/: post_service.py  user_service.py
app/web/: views.py
app/web/static/css/: custom.css
app/web/static/js/: auth.js  utils.js
app/web/templates/: error.html  home.html  layout.html  post.html
